
 This program is distributed in the hope that it will be useful, but
 WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
 implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

		----------------------------------

ChangeLog about GNU GLOBAL

September 27 2008, by Shigio YAMAGUCHI

	* Changed the default cache size of DB library from 5M to 50M bytes.

July 14 2008, by Shigio YAMAGUCHI

	* Changed to skip all files whoes first character of name is '.'.

	The following path was deleted from the DEFAULTSKIP in configure.ac, since new
	rule covers them.

	.notfunction
	.gdbinit
	.cvsrc
	.cvsignore
	.gitignore
	.cvspass
	.cvswrappers
	.deps/
	.snprj/
	.svn/
	.git/

April 21 2008, by Shigio YAMAGUCHI

	* gtags.vim: Stopped use of temporary file.

March 25 2008, by Shigio YAMAGUCHI

	* gtags.vim, gtags.pl: rewritten using new '--from-here' option of global(1).
	* Added htags/ghtml.cgi.tmpl.
	* Described the method of apache setting as a comment in htags/global.cgi.tmpl.in.
	* Modifications to allow symbolic link.
	  To realize it, normalize_path() and abs2rel() in libutil/abs2rel.c module is used
	  instead of realpath(3) library function.
	* gtags.el and gtags.vim are rewritten using new '--from-here' option of global(1).

October 26 2007, by Shigio YAMAGUCHI

	* Added file 'DONORS' which includes the list of donations to GNU GLOBAL.
	* Idset module: Performance improvement of idset module by using "unsigned long"
	  instead of "unsigned int" for bitmask. This is necessary to use 64 bit processor
	  effectively.

July 6 2007, by Shigio YAMAGUCHI

	* Migrated to GPLv3 and LGPLv3.
	* gtags.conf.in: Migrated to simple all-permissive license.

May 5 2007, by Shigio YAMAGUCHI

	* New files: BOKIN_MODEL, BOKIN_MODEL_FAQ, DONORS

March 10 2007, Shigio YAMAGUCHI

	* gtags.el: Added (provide 'gtags).
	* libutil/env.c: Use putenv(3) if it is available else use setenv(3).
	  Some systems don't have setenv(3).
